# alfred

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  REPRODUCE.md  pyproject.toml
alfred/config/: models.json
alfred/eval/: binding_only_eval.py  expansion_eval.py  expansion_tasks_phase2.json  expansion_tasks_phase2_balanced10.json  expansion_tasks_phase2_cross.json
alfred/runtime/: cache.py  composite_executor.py  dispatcher.py  embedder.py  llm_client.py  reflexer.py  router.py  store.py  thinker_adapter.py  types.py  validators.py
benchmarks/SET-1/: README.md  SKILL.md  oracle.py  preflight.py  run.ts  settings.py  settings_schema.json  tasks.json  tasks_hard.json
benchmarks/SET-2/: README.md  SKILL.md  oracle.py  patterns.json  patterns_distilled.json  preflight.py  run.ts  settings.py  settings_schema.json  tasks.json
benchmarks/reports/: binding-only-all-ministral-2026-06-16.txt  binding-only-phase2-qwen2b-balanced10.txt  binding-only-phase2-qwen2b.txt  binding-only-qwen3.5-0.8b-atoms.txt  binding-only-qwen3.5-2b-atoms.txt  binding-only-qwen3.5-2b-composites.txt  composite-binding-phase2-qwen2b.txt  set1-e1e2-qwen2b.txt  set1-e2-hard-qwen2b.txt  set2-reflexer-qwen-3.5-2b-2026-06-17T20-03-55.json  set2-reflexer-qwen-3.5-2b-2026-06-17T20-04-26.json  set2-thinker-35b-hard5.txt  set2-thinker-qwen2b-48.txt  set2-thinker-vs-reflexer-qwen2b.txt  (+5 more)
docs/: findings_reflexer_model_comparison.md  findings_settings_distillation.md  findings_teacher_model.md  findings_thinker_vs_reflexer.md
patterns/: distilled_local35b.json
thesis/: main.tex  references.bib
(+53 files in other folders)
